--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "contentful": "^10.2.0",
+    "disqus-react": "^1.1.5",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
